Fix wrapping on safari (resolves #55)

--- a/web/public/css/log.css
+++ b/web/public/css/log.css
@@ -2,6 +2,7 @@
 .level {
     white-space: pre-wrap;
     tab-size: 4;
+    word-break: normal;
 }
 
 .level-prefix {
